# AsciiAq

./: .gitignore  fishdef.fdf  profiler.py  pyproject.toml  setup.py
fish/: predator.fdf
src/game/: __init__.py  ai.py  aquarium.py  engine.py  entity.py  fdf_parser.py  fish.py  graphic_things.py  main.py  renderer.py  vector.py
