[build-system]
requires = ["setuptools>=64", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "asciiaq"
version = "0.1.0"
description = "ASCII aquarium game engine"
requires-python = ">=3.10"

[project.scripts]
asciiaq = "game.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
